ci: add GitHub Actions test workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,14 @@ dev = [
   "black>=24.10.0",
 ]
 
+serve = [
+  "fastapi",
+  "uvicorn",
+]
+
 [project.scripts]
 status-checker = "status_checker.cli:entrypoint"
+status-checker-serve = "uvinorn:main"
 
 [tool.black]
 line-length = 100
@@ -39,3 +45,6 @@ target-version = "py310"
 [tool.pytest.ini_options]
 addopts = "-q"
 pythonpath = ["src"]
+
+[tool.uvicorn]
+# convenience runner: `python -m uvicorn status_checker.serve:app --host 0.0.0.0 --port 8080`
